--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -135,5 +135,5 @@
     </div>
   </div>
   <!--/if not logged in-->
-  <!--<div ng-include="'footer/index.tpl.html'"></div>-->
+  <div ng-include="'footer/index.tpl.html'"></div>
 </div>
