--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -42,7 +42,7 @@
     </svg>
 
     <video id="video" autoplay="autoplay" muted="muted" preload="auto" loop="loop">
-        <source src="/videos/washington.mp4" type="video/webm">
+        <source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/webm">
     </video>
 </div>
 
