--- a/.tmp/public/src/app/vote/index.tpl.html
+++ b/.tmp/public/src/app/vote/index.tpl.html
@@ -1,3 +1,12 @@
 <div ui-view="vote">
-	<h1>VOTE</h1>
+
+	<a href="bill/{{vote.bill}}/1">{{vote.bill}}</a>
+
+	<h1>{{vote.title}}</h1>
+
+	<div ng-repeat="voteVote in votes">
+		{{voteVote}}
+	</div>
+
+
 </div>
