--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -15,11 +15,23 @@
 		<md-divider></md-divider>
 		<br><br>
 
+		<!--
 		<button class="btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i></button>
 		<button class="btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i></button>
+		-->
+
+		<!--
 		{{bill.voteCount}}
 		<div ng-repeat="vote in votes">
 			{{vote.vote}}<a href="/member/{{vote.user.username}}">{{vote.user.username}}</a>
+		</div>
+		-->
+
+		<div ng-repeat="vote in votes">
+			<p><a href="/vote/{{vote.id}}">{{vote.title}}</a></p>
+			<p>{{vote.plusCount}} - {{vote.minusCount}} - {{vote.otherCount}}</p>
+			<p>{{vote.result}}</p>
+			<p>{{vote.type}}
 		</div>
 
 		<br><br><br>
