--- a/assets/styles/css/about.css
+++ b/assets/styles/css/about.css
@@ -21,7 +21,7 @@
   color: rgba(255,255,255,0.9);
   font-size: 50px;
   font-weight: 400;
-  text-align: center;
+  //text-align: center;
   margin: auto;
   margin-left:10%;
 }
