--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -6,75 +6,161 @@
 				<h1 style="text-align:left">discover</h1>
 			</div>
 		</div>
-		<br>
 		<div class="container">
+			<div class="spacing-5"></div>
 	        <md-card>
 				<md-card-title>
 					<input style="width:100%" ng-keyup="keyPress(searchValue)" ng-model="searchValue">
 				</md-card-title>
 			</md-card>
-			<div class='md-padding'>
-	            <md-card ng-repeat="searchResult in searchResults">
-	              <md-card-title>
-	                <md-card-title-text>
-						<a href="{{searchResult.urlTitle}}">{{searchResult}}</a>
-					</md-card-title-text>
-	              </md-card-title>
-	            </md-card>
-	        </div>
-	        <button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br><br>
-	        <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-	        <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
-	          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
-	            <div class="image" style="background-image: url('{{user.coverUrl}}')">
-	              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
-	            </div>
-	            <div class="info">
-	              <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
-	              <h3 class="position"><a href="member/{{user.username}}">{{user.title}}</a></h3>
-	              <p>{{user.state}}</p>
-	            </div>
-	            <div class="social">
-	              <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
-	              <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
-	              <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
-	            </div>
-	          </div>
-	        </div>
+          	<div class="spacing-25"></div>
+ 			<uib-tabset active="1">
+ 			    <uib-tab index="1" heading="Trending">
 
-			<div class="container">
-	 			<uib-tabset>
-	 			    <uib-tab heading="Trending" active="active">
-	    			</uib-tab>
-					<uib-tab heading="Bills">
-	    			</uib-tab>
-					<uib-tab heading="Committees">
-	    			</uib-tab>
-					<uib-tab heading="Members">
-	    			</uib-tab>
-	    			<uib-tab heading="Votes">
-	    			</uib-tab>
-				</uib-tabset>
-			</div>
+					<md-card ng-repeat="vote in votes">
+			          <md-card-title>
+			            <md-card-title-text>
+			              <h4><a href="/vote/{{vote.id}}">{{vote.title}}</a></h4>
+			              <div class="margin-5"></div>
+			              <h4>
+			                <b>+ {{vote.plusCount-vote.minusCount}}</b>
+			                <button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)">
+			                  <i class="fa fa-caret-up vBlue"></i> <b>{{vote.plusCount}}</b>
+			                </button>
+			                <button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)">
+			                  <i class="fa fa-caret-down red-color"></i>  <b>{{vote.minusCount}}</b>
+			                </button>
+			                <br><br>
+			                <span class="subtitle">({{vote.voteCount}} total votes)</span>
+			              </h4>
+			              <div class="margin-10"></div>
+			              <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+			              <br><br>
+			            </md-card-title-text>
+			          </md-card-title>
+			        </md-card>
+			        <br><br>
+			        <div ng-click="loadMoreVotes()" style="text-align:center">
+			          <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
+			        </div>
+    			</uib-tab>
+				<uib-tab heading="Results" ng-show="searchResults">
+					<div class='md-padding'>
+			            <md-card ng-repeat="searchResult in searchResults">
+			              <md-card-title>
+			                <md-card-title-text>
+								<a href="{{searchResult.urlTitle}}">{{searchResult}}</a>
+							</md-card-title-text>
+			              </md-card-title>
+			            </md-card>
+			        </div>
+    			</uib-tab>
+				<uib-tab heading="Bills">
 
-		    <div class='md-padding'>
-		    	<md-card ng-repeat="bill in bills">
-		        	<md-card-title>
-		            	<md-card-title-text>
-			            	<h4>
-				                <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
-				                <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
-				                <a href="/bill/{{bill._id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
-			            	</h4>
-		            	</md-card-title-text>
-		            </md-card-title>
-		        </md-card>
-		    </div>
-	        <div ng-click="loadMoreBills()" style="text-align:center">
-	          <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
-	        </div>
+			    	<md-card ng-repeat="bill in bills">
+			        	<md-card-title>
+			            	<md-card-title-text>
+				            	<h4>
+					                <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
+					                <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
+					                <a href="/bill/{{bill._id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
+				            	</h4>
+			            	</md-card-title-text>
+			            </md-card-title>
+			        </md-card>
+			        <div ng-click="loadMoreBills()" style="text-align:center">
+			          <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
+			        </div>
+
+    			</uib-tab>
+				<uib-tab heading="Committees">
+
+					<md-card ng-repeat="committee in committees" class="col-sm-12">
+						<md-card-title>
+							<md-card-title-text>
+								<h4><a href="/committee/{{committee.urlTitle}}"><span class="">{{committee.title}}</span></a></h4>
+							</md-card-title-text>
+						</md-card-title>
+					</md-card>
+					<div ng-click="loadMoreCommittees()" style="text-align:center">
+						<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+					</div>
+
+    			</uib-tab>
+				<uib-tab heading="{{userCount}} Members">
+
+					<button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br><br>
+			        <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+			        <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
+			          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+			            <div class="image" style="background-image: url('{{user.coverUrl}}')">
+			              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+			            </div>
+			            <div class="info">
+			              <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
+			              <h3 class="position"><a href="member/{{user.username}}">{{user.title}}</a></h3>
+			              <p>{{user.state}}</p>
+			            </div>
+			            <div class="social">
+			              <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+			              <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+			              <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+			            </div>
+			          </div>
+			        </div>
+
+			        <div class="col-lg-4 col-sm-6" ng-repeat="user in users">
+			          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+			            <div class="image" style="background-image: url('{{user.coverUrl}}')">
+			              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+			            </div>
+			            <div class="info">
+			              <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
+			              <h3 class="position"><a href="member/{{user.username}}">{{user.title}}</a></h3>
+			              <p>{{user.state}}</p>
+			            </div>
+			            <div class="social">
+			              <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+			              <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+			              <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+			            </div>
+			          </div>
+			        </div>
+
+    			</uib-tab>
+    			<uib-tab heading="Votes">
+
+    			    <md-card ng-repeat="vote in votes">
+			          <md-card-title>
+			            <md-card-title-text>
+			              <h4><a href="/vote/{{vote.id}}">{{vote.title}}</a></h4>
+			              <div class="margin-5"></div>
+			              <h4>
+			                <b>+ {{vote.plusCount-vote.minusCount}}</b>
+			                <button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)">
+			                  <i class="fa fa-caret-up vBlue"></i> <b>{{vote.plusCount}}</b>
+			                </button>
+			                <button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)">
+			                  <i class="fa fa-caret-down red-color"></i>  <b>{{vote.minusCount}}</b>
+			                </button>
+			                <br><br>
+			                <span class="subtitle">({{vote.voteCount}} total votes)</span>
+			              </h4>
+			              <div class="margin-10"></div>
+			              <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+			              <br><br>
+			            </md-card-title-text>
+			          </md-card-title>
+			        </md-card>
+			        <br><br>
+			        <div ng-click="loadMoreVotes()" style="text-align:center">
+			          <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
+			        </div>
+
+    			</uib-tab>
+			</uib-tabset>
+			<div class="spacing-50"></div>
 	    </div>
-	    <div style="height:50px;"></div>
 	</div>
 	<div ng-show="searchQuery">
 		<div class="imageContainerSmall">
@@ -83,8 +169,9 @@
 				<h1 style="text-align:left">{{searchQuery}}</h1>
 			</div>
 		</div>
+		<!--filters - tags etc-->
 		<div class="container">
- 			<uib-tabset>
+			<uib-tabset>
  			    <uib-tab heading="Bills" active="active">
     			</uib-tab>
 				<uib-tab heading="Committees">
@@ -96,9 +183,6 @@
     			<uib-tab heading="Votes">
     			</uib-tab>
 			</uib-tabset>
-		</div>
-		<!--filters - tags etc-->
-		<div class="container">
 			<div ng-show="searchResult.username" ng-repeat="searchResult in searchResults">
 				<div class="col-lg-4 col-sm-6">
 				  <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
